# human_activity_labeling

./: .gitignore  LICENSE.txt  README.md
feature_generation/: CMakeLists.txt  README  manifest.xml
feature_generation/scripts/: binStumpsObj.txt  binStumpsTemporalSkel.txt  binfeats.m  format_svm_seg.pl  getBinStumps.m  nohup.out
feature_generation/src/: constants.h  extractObjectPointclouds.cpp  featureGenerationForFrames.cpp  featureGenerationForSegments.cpp  features.cpp  featuresRGBD_skel.cpp  (+8 more)
feature_generation_pcl/: CMakeLists.txt  README  Segmentation_labeling.txt  Segmentation_sampled.txt  run_format_data.sh
feature_generation_pcl/scripts/: binStumpsObjObj.txt  binStumpsSkel.txt  binStumpsSkelObj.txt  binStumpsTemporalObj.txt  createSegmentsFiles.pl  format_svm_seg.pl  mergeAndSampleSegments.pl  parallel_featgenSeg  parallel_frameFeatgen  run_format_data_ver2.sh
feature_generation_pcl/src/: HOG.cpp  disjoint-set.h  extractObjectPointclouds.cpp  featureGenerationForFrames.cpp  featureGenerationForSegments.cpp  features.cpp  featuresRGBD_skel.cpp  features_multiFrame.cpp  frame.cpp  frame.h  frameFeatures.cpp  frame_skel.cpp  frame_skel.h  getObjHandTrajectories.cpp  get_skel_segments.cpp  pointcloudClustering.h  readData.cpp  segment-graph.h  segmentation_skel.cpp  skeletonViewer.cpp
feature_generation_pcl/src/includes/: CombineUtils.h  CovarianceMatrix.h  color.h  point_types.h
svm_struct_learning/: .gitignore  Makefile  README  install_dependencies.sh  pyglpk_setup.py  svm_struct_api.c  svm_struct_api.h  svm_struct_api_types.h  svmstruct_mrf_act.py
(+37 files in other folders)
